<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.RegistrationActivity"
    android:background="@color/colorBlack">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="30dp"
        android:src="@drawable/cake" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="22sp"
        android:textColor="#ffffff"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/login_button" />

    <Button
        android:id="@+id/alreadyHaveAccountBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/already_have_an_account"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:background="@drawable/register_button"
        android:textStyle="bold" />

</LinearLayout>